# env-scanning-system

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  calculate_priority.py  dedup_alt.py  dedup_final.py  filter_duplicates.py  priority_ranking_final.py  pyproject.toml
.claude/agents/: archive-loader.md  archive-notifier.md  calibration-engine.md  citation-chaser.md  confidence-evaluator.md  cross-validator.md  db-updater.md  dedup-filter.md  deep-research-analyst.md  exploration-scanner.md  file-organizer.md  frontier-explorer.md  gap-analyzer.md  link-tracker.md  (+19 more)
.github/: WORKFLOW-SETUP.md
cache/: source_tier_lookup.json  steeps_keywords.json
config/: agent-prompts.yaml  automation.yaml  discovered-sources.json  file-structure-config.json  pSRT-config.yaml  pSRT-schema.json  regional-expansion-sources.json  regional-sources-quick-reference.json  regular-sources.json  source-performance.json  sources.yaml  url-schema.yaml  workflow-definition-v3.yaml  workflow-definition.yaml
context/: ARCHIVE-LOADER-2026-01-14.json  ARCHIVE-LOADER-INDEX-2026-01-14.txt  ARCHIVE-LOADER-SUMMARY-2026-01-12-weekly.md  ARCHIVE-LOADER-SUMMARY-2026-01-12.md  ARCHIVE-LOADER-VALIDATION.json  MARATHON-STAGE2-QUICK-REF-2026-01-12.md  NEW-SOURCES-QUICK-ADD-2026-01-12.md  archive-summary-2026-01-13.json  archive-summary-2026-01-14.json  archive-summary-2026-01-15.json  dedup-index-2026-01-12-weekly.json  dedup-index-2026-01-12.json  dedup-index-2026-01-13.json  dedup-index-2026-01-14.json  dedup-index-2026-01-15.json  previous-signals.json  stage2-citation-tracking-2026-01-12.json  stage2-marathon-quick-reference-2026-01-12.md
docs/: TOKEN-OPTIMIZATION-STRATEGY.md
env-scanning/: status.json
logs/: ARCHIVE-LOADER-FINAL-SUMMARY-2026-01-14.md  archive-notifier-report-2026-01-13.md  archive-notifier-report-2026-01-14.md  db-update-2026-01-14.txt  dedup-log-2026-01-13.txt  dedup-summary-2026-01-13.json  dedup-summary-2026-01-13.txt  dedup-summary-2026-01-14.json  frontier-exploration-log-2026-01-13.json  frontier-exploration-log-2026-01-14.json  google-crawler-modifications-2026-01-14.json  link-tracking-2026-01-13.json  link-tracking-2026-01-14.json  orchestrator-state-2026-01-13-marathon.json  orchestrator-state-2026-01-13.json  source-evaluation-2026-01-13.json  workflow-status.json
prompt/: environmental-scanning-workflow.md
signals/: database.json
src/: __init__.py
tests/: e2e-results.json  e2e-workflow-validator.py
(+402 files in other folders)
